--- a/Foundation/sv/achievements.release.json
+++ b/Foundation/sv/achievements.release.json
@@ -5,13 +5,13 @@
 		"ACH_OWNTERRITORY_30_NAME": "Ett län för långt",
 		"ACH_OWNTERRITORY_30_DESC": "Äg 30 territorium",
 		"ACH_OWNTERRITORY_30_CHALLENGE_NAME@~2024-12-20 00:20:41": "Feodalherre",
-		"ACH_OWNTERRITORY_30_CHALLENGE_DESC@2025-01-14 23:01:25": "Äga minst 30 territorier (utmaningsregler eller svårare)",
+		"ACH_OWNTERRITORY_30_CHALLENGE_DESC@2025-01-14 23:01:25": "Äg minst 30 territorier (Utmanande regler eller svårare)",
 		"ACH_100_POP_NAME@~2025-01-29 15:59:23": "En växande by!",
-		"ACH_100_POP_DESC@~2025-01-29 15:59:26": "Uppnå 100 invånare",
+		"ACH_100_POP_DESC@~2025-01-29 15:59:26": "Nå 100 invånare",
 		"ACH_500_POP_NAME@~2025-01-29 15:59:30": "En välmående stad!",
-		"ACH_500_POP_DESC@~2025-01-29 15:59:33": "Uppnå 500 invånare",
+		"ACH_500_POP_DESC@~2025-01-29 15:59:33": "Nå 500 invånare",
 		"ACH_POPULATION_500_CHALLENGE_NAME@~2024-12-20 00:21:30": "Civitas Maxima",
-		"ACH_POPULATION_500_CHALLENGE_DESC@2025-01-14 23:01:25": "Har en befolkning på 500 eller fler (Challenge-regler eller svårare)",
+		"ACH_POPULATION_500_CHALLENGE_DESC@2025-01-14 23:01:25": "Ha en befolkning på 500 eller fler (Utmanande regler eller svårare)",
 		"ACH_PRODUCE_TOOLS_NAME": "Dags för hammare!",
 		"ACH_PRODUCE_TOOLS_DESC": "Producera verktyg",
 		"ACH_RUSTIC_CHURCH_NAME@~2025-01-29 15:59:38": "Din första kyrka",
@@ -27,11 +27,11 @@
 		"ACH_10000_GOLD_NAME@~2025-01-29 16:01:32": "Badar i guld",
 		"ACH_10000_GOLD_DESC@~2025-01-29 16:19:32": "Samla ihop 10 000 mynt",
 		"ACH_PROFIT_MONTHLY_1000000_NAME": "Kung Midas",
-		"ACH_PROFIT_MONTHLY_1000000_DESC": "Tjäna 15 000 Coins under 30 dagar",
+		"ACH_PROFIT_MONTHLY_1000000_DESC": "Tjäna 15 000 mynt under 30 dagar",
 		"ACH_LEVY_MANDATE_NAME": "Bara den här gången... Jag lovar!",
 		"ACH_LEVY_MANDATE_DESC": "Tjäna mynt från uttaxeringsmandatet",
 		"ACH_ENACT_EDICT_NAME": "Utlysande av förbud",
-		"ACH_ENACT_EDICT_DESC": "Utfärda ett påbud",
+		"ACH_ENACT_EDICT_DESC": "Utfärda ett förordnande",
 		"ACH_SPAWN_BLACK_SHEEP_NAME@~2025-01-29 16:01:40": "HERREGUD, ett svart får. Omöjligt!!",
 		"ACH_SPAWN_BLACK_SHEEP_DESC@~2025-01-29 16:01:44": "Framkalla ett svart får",
 		"ACH_TAX_VILLAGER_NAME": "Serf och gräs",
@@ -67,7 +67,7 @@
 		"ACH_HOST_ROYAL_KNIGHTS_NAME": "Skam den, som tänker illa därom!",
 		"ACH_HOST_ROYAL_KNIGHTS_DESC@2025-01-14 22:58:01": "Framgångsrikt värd för ett kompani av kungliga riddare",
 		"ACH_QUARTERS_SPLENDOR_100_NAME": "Passar för en kung",
-		"ACH_QUARTERS_SPLENDOR_100_DESC@2025-01-14 22:58:01": "Bygga privata kvarter värda 100 Kingdom Splendour",
+		"ACH_QUARTERS_SPLENDOR_100_DESC@2025-01-14 22:58:01": "Bygga privata kvarter värda 100 Kungarikesprakt",
 		"ACH_STOCK_RATION_400_NAME": "Salt fisk och pottage",
 		"ACH_STOCK_RATION_400_DESC": "Lager 400 Krigsransoner",
 		"ACH_ARMYSIZE_100_NAME": "Centuria",
@@ -81,14 +81,14 @@
 		"ACH_PRODUCE_MONASTIC_MEAL_NAME": "Ora et Labora",
 		"ACH_PRODUCE_MONASTIC_MEAL_DESC": "Producera en klostermåltid",
 		"ACH_MONTHLY_TRADE_VOLUME_500_NAME": "Via Commercii, Via Dei",
-		"ACH_MONTHLY_TRADE_VOLUME_500_DESC@~2024-09-11 17:29:18": "Utbyta 500 resurser med Kinstone Abbey under 30 dagar",
+		"ACH_MONTHLY_TRADE_VOLUME_500_DESC@~2024-09-11 17:29:18": "Utbyta 500 resurser med Kinstorp kloster under 30 dagar",
 		"ACH_ABBATIAL_SPLENDOR_100_NAME": "Gudomlig arkitektur",
-		"ACH_ABBATIAL_SPLENDOR_100_DESC@2025-01-14 22:58:01": "Bygg en abbatialkyrka värd 100 Clergy Splendour",
+		"ACH_ABBATIAL_SPLENDOR_100_DESC@2025-01-14 22:58:01": "Bygg en abbatialkyrka värd 100 Prästerskapets prakt",
 		"ACH_PRIVILEGE_WINE_IMPORT_CHALLENGE_NAME@~2024-12-20 00:20:36": "Första tillväxten",
 		"ACH_PRIVILEGE_WINE_IMPORT_CHALLENGE_DESC@~2025-01-20 20:47:34": "Anta privilegiet \"Seal of Prestige\" (utmaningsregler eller svårare)",
-		"ACH_VC_PROSPEROUS_PRIORY_NAME": "Prior of Plenty",
+		"ACH_VC_PROSPEROUS_PRIORY_NAME": "Prior av välstånd",
 		"ACH_VC_PROSPEROUS_PRIORY_DESC@2025-01-14 22:58:01": "Slutför ambitionen: \"Ett välmående kloster\"",
-		"ACH_VC_PROSPEROUS_PRIORY_CHALLENGE_NAME@~2024-12-20 00:21:23": "Abbey of Abundance",
+		"ACH_VC_PROSPEROUS_PRIORY_CHALLENGE_NAME@~2024-12-20 00:21:23": "Överflödets kloster",
 		"ACH_VC_PROSPEROUS_PRIORY_CHALLENGE_DESC@2025-01-14 23:01:25": "Slutför ambitionen: \"En välmående prästgård\" (utmaningsregler eller svårare)",
 		"ACH_PRODUCE_WEAPONS_3_NAME": "Instrument från Agincourt",
 		"ACH_PRODUCE_WEAPONS_3_DESC@2025-01-14 22:58:01": "Tillverka vapen av typen långsvärd, långbåge och gädda",
@@ -96,7 +96,7 @@
 		"ACH_CUMULATIVE_COINS_100000000_DESC@~2024-12-20 19:08:22": "Tjäna 100.000.000 mynt (kumulativt)",
 		"ACH_CUMULATIVE_IMMIGRANTS_1000_NAME@~2024-12-20 00:19:25": "Den stora livegenskapsmigrationen",
 		"ACH_CUMULATIVE_IMMIGRANTS_1000_DESC@2025-01-14 23:01:25": "Välkomna 1.000 nyanlända genom invandring (kumulativt)",
-		"ACH_CUMULATIVE_TERRITORY_100_NAME@~2024-12-20 00:19:17": "Manorial Magnate",
+		"ACH_CUMULATIVE_TERRITORY_100_NAME@~2024-12-20 00:19:17": "Herrgårdens storman",
 		"ACH_CUMULATIVE_TERRITORY_100_DESC@~2024-12-20 00:19:15": "Köp 100 Territorier (kumulativt)",
 		"ACH_CUMULATIVE_INFLUENCE_KINGDOM_100000_NAME@~2024-12-20 00:19:10": "En plats vid det höga bordet",
 		"ACH_CUMULATIVE_INFLUENCE_KINGDOM_100000_DESC@~2024-12-20 00:19:07": "Tjäna 100.000 Kingdom Influence (kumulativt)",
@@ -106,7 +106,7 @@
 		"ACH_CUMULATIVE_INFLUENCE_LABOR_100000_DESC@~2024-12-20 00:18:49": "Tjäna 100.000 arbetskraftens inflytande (kumulativt)",
 		"ACH_CUMULATIVE_BEAUTIFICATION_1000_NAME@~2024-12-20 00:18:39": "Karl den stores trädgårdar",
 		"ACH_CUMULATIVE_BEAUTIFICATION_1000_DESC@~2024-12-20 00:18:36": "Bygga 1.000 dekorationer för förskönande ändamål (kumulativt)",
-		"ACH_CUMULATIVE_PRODUCE_MANUSCRIPTS_10000_NAME@~2024-12-20 00:18:24": "Codex Gigas",
+		"ACH_CUMULATIVE_PRODUCE_MANUSCRIPTS_10000_NAME@~2024-12-20 00:18:24": "Djävulsbibeln",
 		"ACH_CUMULATIVE_PRODUCE_MANUSCRIPTS_10000_DESC@~2024-12-20 00:18:19": "Producera 10.000 manuskript (kumulativt)",
 		"ACH_CUMULATIVE_HOST_PILGRIM_500_NAME@~2024-12-20 00:18:16": "Hundra hörda berättelser",
 		"ACH_CUMULATIVE_HOST_PILGRIM_500_DESC@~2024-12-20 00:18:13": "Ta emot 500 grupper av pilgrimer i ditt kloster (kumulativt)",
