--- a/Foundation/sv/buildings.release.json
+++ b/Foundation/sv/buildings.release.json
@@ -61,7 +61,7 @@
 		"MODEST_CLOISTER_A": "Modest Cloister, gångväg",
 		"MODEST_CLOISTER_CORNER_A": "Modest Cloister, hörnet",
 		"MODEST_CLOISTER_DOOR_A": "Modest Cloister, Entré",
-		"ABBEY_A": "Stone Hall, Major",
+		"ABBEY_A": "Stensal, stor",
 		"ABBEY_B": "Stone Hall, mindre",
 		"TRAINING_DUMMY": "Träningsdocka",
 		"INN_DOOR_A@~2024-12-17 16:34:48": "Välkomnande entré",
@@ -87,9 +87,9 @@
 		"MONASTERY_RUSTIC_ROOM_B": "Rustik passage",
 		"MONASTERY_RUSTIC_ROOM_C": "Rustik stuga, trä",
 		"MONASTERY_RUSTIC_ROOM_D": "Rustikt galleri",
-		"MONASTERY_RUSTIC_ROOM_E": "Rustic Quarters, Major",
+		"MONASTERY_RUSTIC_ROOM_E": "Rustikt rum, stort",
 		"MONASTERY_RUSTIC_ROOM_F": "Rustik stuga, sten",
-		"MONASTERY_RUSTIC_ROOM_G": "Rustic Quarters, Minor",
+		"MONASTERY_RUSTIC_ROOM_G": "Rustikt rum, litet",
 		"MONASTERY_RUSTIC_TOWER_A": "Rustikt klocktorn, öppen klockstapel",
 		"MONASTERY_RUSTIC_TOWER_B": "Rustikt klocktorn, sluten klockstapel",
 		"MONASTERY_RUSTIC_TOWER_C": "Rustikt klocktorn, klockstapel i trä",
@@ -99,8 +99,8 @@
 		"MONASTERY_RUSTIC_DOOR_C": "Rustik grind, mindre",
 		"MONASTERY_RUSTIC_DOOR_D": "Rustic Gate, Major",
 		"MONASTERY_RUSTIC_FRONTAGE": "Rustik fasad",
-		"MONASTERY_MODEST_CORE_A": "Modest Hall, Major",
-		"MONASTERY_MODEST_ROOM_A": "Modest Hall, Minor",
+		"MONASTERY_MODEST_CORE_A": "Enkel sal, stor",
+		"MONASTERY_MODEST_ROOM_A": "Enkel sal, liten",
 		"MONASTERY_MODEST_ROOM_B": "Modest galleri",
 		"MONASTERY_MODEST_ROOM_C": "Blygsam passage",
 		"MONASTERY_MODEST_TOWER_A": "Modest Klocktornet, Major",
@@ -110,8 +110,8 @@
 		"MONASTERY_MODEST_DOOR_B": "Modest Gate, Moll",
 		"MONASTERY_MODEST_FACADE_A": "Blygsam fasad",
 		"MONASTERY_MODEST_BUTTRESS_B": "Modest Buttress, stående",
-		"MONASTERY_MODEST_BUTTRESS_A": "Modest Buttress, Tiled",
-		"MONASTERY_MODEST_CROSS_A": "Modest Cross",
+		"MONASTERY_MODEST_BUTTRESS_A": "Enkel strävpelare, murad",
+		"MONASTERY_MODEST_CROSS_A": "Enkelt kors",
 		"MONASTERY_MODEST_CROSS_B": "Blygsam prydnad",
 		"MONAS_ABBA_BENCH_01_A": "Raffinerad bänk",
 		"MONAS_ABBA_BENCH_02_A": "Utsökt bänk",
@@ -201,7 +201,7 @@
 		"KEEP_DOOR_UPPER_ENTRYWAY@~2023-08-28 23:23:23": "Rustik övre grind, ingång",
 		"CASTLE_MODEST_SET@~2023-08-30 20:48:20": "Slottet Modest Arkitektur",
 		"CASTLE_MODEST_CHIMNEY_1@~2025-01-17 00:44:24": "Bred skorsten",
-		"CASTLE_MODEST_KEEP_1@~2023-09-15 19:20:14": "Modest Keep",
+		"CASTLE_MODEST_KEEP_1@~2023-09-15 19:20:14": "Enkelt kärntorn",
 		"CASTLE_MODEST_DOOR_1@~2023-09-15 19:20:26": "Enkel port i blygsam skala",
 		"CASTLE_MODEST_DOOR_2@~2023-09-15 19:21:03": "Modest Gate, dubbelsidig",
 		"CASTLE_MODEST_DOOR_3@~2023-09-15 19:21:35": "Modest Gate, öppen",
@@ -246,10 +246,10 @@
 		"CASTLE_RUSTIC_DECO_BUTTRESS_B@~2024-03-25 21:03:03": "Rustik stensättning",
 		"CASTLE_RUSTIC_DECO_BUTTRESS_C@~2024-03-25 21:03:09": "Rustik Buttress i trä",
 		"CASTLE_RUSTIC_DECO_DOOR_A@~2024-03-25 21:20:46": "Aged Barricaded Passage",
-		"CASTLE_RUSTIC_DECO_PIKE_A@~2024-03-25 21:28:11": "Menacing Stakes, Tiny",
+		"CASTLE_RUSTIC_DECO_PIKE_A@~2024-03-25 21:28:11": "Hotfulla pålar, små",
 		"CASTLE_RUSTIC_DECO_PIKE_B@~2024-03-25 21:28:27": "Menacing Stakes, lång",
 		"CASTLE_RUSTIC_DECO_PIKE_C@~2024-03-25 21:28:37": "Menacing Stakes, buntade",
-		"CASTLE_RUSTIC_DECO_PIKE@~2024-05-15 14:29:19": "Menacing Stakes",
+		"CASTLE_RUSTIC_DECO_PIKE@~2024-05-15 14:29:19": "Hotfulla pålar",
 		"CASTLE_MODEST_BRAZERO_C@~2024-06-11 18:27:41": "Järnbrasa Pelare",
 		"CASTLE_MODEST_BRAZERO_D@~2024-06-11 18:27:46": "Sten Brazier Pelare, Mindre",
 		"CASTLE_MODEST_BRAZERO_E@~2024-06-11 18:27:54": "Sten Brazier Pelare, Major",
@@ -289,18 +289,18 @@
 		"CASTLE_MODEST_DECO_FLAG_01@~2024-12-12 22:20:38": "Majestätisk flagga",
 		"CASTLE_MODEST_HOARDING_01@~2024-12-12 22:17:55": "Rustika skyltfönster, befästa",
 		"CASTLE_MODEST_PASSAGEWAY_01@~2024-12-12 22:16:11": "Blygsam passage av sten",
-		"CASTLE_MODEST_ROOM_5@~2024-12-12 22:19:44": "Modest Fortified Chamber",
+		"CASTLE_MODEST_ROOM_5@~2024-12-12 22:19:44": "Enkel befäst kammare",
 		"CASTLE_MODEST_DECO_BAYWINDOW_01@~2024-12-12 22:18:59": "Fönster i blygsam sten",
 		"CASTLE_MODEST_TOWER_4@~2024-12-12 22:21:27": "Blygsam stenbulbark",
-		"CASTLE_MODEST_TOWER_5@~2024-12-12 22:23:17": "Modest Turret, Square",
+		"CASTLE_MODEST_TOWER_5@~2024-12-12 22:23:17": "Enkel turell, kvadratisk",
 		"CASTLE_MODEST_TOWER_6@~2024-12-12 22:23:27": "Modest Turret, rund",
 		"CASTLE_MODEST_TOWER_7@~2024-12-12 22:24:03": "Modest observationstorn",
 		"CASTLE_MODEST_TUNNELROOM_01@~2024-12-12 22:15:08": "Blygsam befäst port",
 		"ENCAMPMENT_MODEST_TENT_2@~2024-12-12 22:12:10": "Blygsamt kilformigt tält",
 		"CITY_STONE_FENCE@~2024-12-12 22:11:38": "Stadsstängsel",
 		"CITY_STONE_GATE@~2024-12-12 22:11:41": "Stadens port",
-		"CASTLE_MODEST_DECO_ROOF_01A@~2025-01-09 20:48:44": "Stern Castle Finial",
-		"CASTLE_MODEST_DECO_ROOF_02A@~2025-01-14 19:07:23": "Sharp Castle Finial",
+		"CASTLE_MODEST_DECO_ROOF_01A@~2025-01-09 20:48:44": "Stram slottsfial",
+		"CASTLE_MODEST_DECO_ROOF_02A@~2025-01-14 19:07:23": "Skarp slottsfial",
 		"FEMALE_KNIGHT_STATUE_GOLDEN": "The Vanquisher, Guld",
 		"MALE_KNIGHT_STATUE": "Fredsbevararen, marmor",
 		"ARCHER_STATUE@~2025-01-24 17:23:13": "Vildsvinsslaktaren, marmor",
