--- a/Foundation/sv/general.release.json
+++ b/Foundation/sv/general.release.json
@@ -104,15 +104,15 @@
 	},
 	"JOBS": {
 		"SOLDIER": "Soldat",
-		"HERBALIST": "Herbalist",
+		"HERBALIST": "Örtspecialist",
 		"BEEKEEPER": "Biodlare",
 		"VINTNER": "Vinodlare",
 		"VINEGROWER": "Vinodlare",
 		"SCHOLAR": "Lärd",
-		"REFECTORY_HEAD@~2023-11-27 21:27:31": "Refectorian",
-		"COPYIST": "Copyist",
+		"REFECTORY_HEAD@~2023-11-27 21:27:31": "Refektorian",
+		"COPYIST": "Kopist",
 		"ARCHER@~2023-11-01 19:35:09": "Bågskytt",
-		"SPEARMAN@~2023-11-01 19:35:12": "Spearman",
+		"SPEARMAN@~2023-11-01 19:35:12": "Spjutman",
 		"SWORDMAN@2025-01-14 22:58:01": "Fäktare",
 		"GUARDSMAN@~2023-12-14 23:48:48": "Vaktman",
 		"HOSTELLER@~2024-02-13 16:32:43": "Vandrarhem",
@@ -158,7 +158,7 @@
 		"NO_OPPORTUNITIES": "Det finns inga möjligheter för närvarande.",
 		"EVENT_WINEKING_OPPORTUNITY_WAIT": "Biskopens förvaltare har en förfrågan",
 		"EVENT_WINEKING_OPPORTUNITY_WAIT_DESC": "Förvaltaren har en begäran från biskopen!",
-		"EVENT_TRADETAXATION_OPPORTUNITY_WAIT@2025-01-14 22:58:01": "Din kronofogde har möjlighet att erbjuda",
+		"EVENT_TRADETAXATION_OPPORTUNITY_WAIT@2025-01-14 22:58:01": "Din fogde har möjlighet att erbjuda",
 		"EVENT_TRADETAXATION_OPPORTUNITY_WAIT_DESC": "Din fogde har lärt sig något som kan intressera dig.",
 		"EVENT_SEASONALFAIR_OPPORTUNITY_WAIT@2025-01-14 22:58:01": "Dina bybor har en begäran",
 		"EVENT_SEASONALFAIR_OPPORTUNITY_WAIT_DESC": "Dina bybor tycker att staden ska ha en mässa!",
@@ -169,7 +169,7 @@
 		"EVENT_MONASTERYTRADE_OPPORTUNITY_WAIT@2025-01-14 22:58:01": "Abbedissans delegat har ett erbjudande",
 		"EVENT_MONASTERYTRADE_OPPORTUNITY_WAIT_DESC@2025-01-14 22:58:01": "En delegat erbjuder en handelsmöjlighet från abbedissan.",
 		"EVENT_MONASTERYTRADE_FAVOUR_OPPORTUNITY_WAIT": "En möjlighet till förhandlingar",
-		"EVENT_MONASTERYTRADE_FAVOUR_OPPORTUNITY_WAIT_DESC@~2023-12-05 19:41:06": "Du har en ny möjlighet att förbättra ditt partnerskap med Kinstone Abbey.",
+		"EVENT_MONASTERYTRADE_FAVOUR_OPPORTUNITY_WAIT_DESC@~2023-12-05 19:41:06": "Du har en ny möjlighet att förbättra ditt partnerskap med Kinstorp kloster.",
 		"EVENT_LABOURFAIR_OPPORTUNITY_WAIT@2025-01-14 22:58:01": "Dina bybor har en begäran",
 		"EVENT_LABOURFAIR_OPPORTUNITY_WAIT_DESC": "Folk tycker att vår by borde ha haft en mässa för länge sedan!",
 		"EVENT_ASPIRATION_MONASTERY_OPPORTUNITY_WAIT@~2023-01-01 01:01:01": "Abbedissans delegat har en begäran",
@@ -340,14 +340,14 @@
 		"X_FETCHING_BLUEPRINT": "{1} hämtar ritningen",
 		"X_STUDYING_BLUEPRINT": "{1} studerar ritningen",
 		"STUDY_BLUEPRINT_MANDATE": "Studera en ritning",
-		"X_PREPARING_CHANGING_EDICT@2025-01-14 22:58:01": "{1} reviderar en bys Edict",
+		"X_PREPARING_CHANGING_EDICT@2025-01-14 22:58:01": "{1} reviderar en bys förordnande",
 		"X_PREPARING_CHANGING_PRIVILEGE": "{1} skriver till {2} Estate för att revidera ett Privilege",
-		"TOOLTIP_DISABLED_CHANGING_EDICT": "Inget påbud att ändra.",
+		"TOOLTIP_DISABLED_CHANGING_EDICT": "Inget förordnande att ändra.",
 		"TOOLTIP_DISABLED_CHANGING_PRIVILEGE": "Nej {1} Behörighet att ändra.",
 		"TOOLTIP_DISABLED_ALREADY_EXECUTED": "Detta mandat har redan verkställts. En {1} är redo att inaktiveras i boken.",
-		"EDICT_TOOLTIP_DISABLED": "För att ändra, utföra kronofogde mandat \"{1}\".",
-		"PRIVILEGE_TOOLTIP_DISABLED": "För att ändra, verkställa fogde mandat \"{1}\"",
-		"ALL_EDICT_SLOTS_TAKEN@~2024-12-17 01:57:10": "Alla Edict-platser är upptagna. Ta bort en Edict först.",
+		"EDICT_TOOLTIP_DISABLED": "För att ändra, verkställ fogdemandatet \"{1}\".",
+		"PRIVILEGE_TOOLTIP_DISABLED": "För att ändra, verkställ fogdemandatet \"{1}\"",
+		"ALL_EDICT_SLOTS_TAKEN@~2024-12-17 01:57:10": "Alla Förordnande-platser är upptagna. Ta bort ett förordnande först.",
 		"ALL_PRIVILEGE_SLOTS_TAKEN@~2024-12-17 01:57:12": "Alla Privilege-platser är upptagna. Ta bort en Privilege först.",
 		"CLERGY_IMMIGRATION_FEMALE_MANDATE@~2024-04-17 17:06:44": "Välkomna fem kvinnliga noviser till ditt kloster",
 		"CLERGY_IMMIGRATION_MALE_MANDATE@~2024-04-17 17:06:41": "Välkomna fem manliga noviser till ditt kloster",
@@ -369,8 +369,8 @@
 		"I_AM_GOING_TO_PROSPECT": "Jag ska prospektera en mineralfyndighet",
 		"I_AM_PROSPECTING": "Jag prospekterar",
 		"X_PROSPECTING_MINERAL_DEPOSIT": "{1} prospekterar mineralfyndigheten",
-		"ORE_IDENTIFIED": "Din kronofogde hittade en {IMG1} deposition!",
-		"STONE_IDENTIFIED": "Din kronofogde hittade bara {IMG1} i en närliggande deposition",
+		"ORE_IDENTIFIED": "Din fogde hittade en {IMG1} deposition!",
+		"STONE_IDENTIFIED": "Din fogde hittade bara {IMG1} i en närliggande ansamling",
 		"POSSIBLE_MINERAL_IN_TILE": "Mineralavlagringar finns närvarande!",
 		"MINERAL_DEPOSIT": "Mineralfyndighet"
 	},
@@ -428,12 +428,12 @@
 		"KINGDOM_KINGSUMMON_MANDATE_BTN@~2024-05-03 17:18:44": "Delta",
 		"KINGDOM_KINGSUMMON_HOSTING_MANDATE_BTN_TOOLTIP@~2024-06-17 18:21:26": "Om du accepterar dina kungliga plikter kommer trötta kungliga kompanier att besöka din by.",
 		"KINGDOMHOSTING_KINGSUMMON_TITLE@~2024-06-17 18:09:45": "Delta i kungligt kompani",
-		"KINGDOMHOSTING_KINGSUMMON_DESC@2025-01-14 22:58:01": "Din kungliga hovleverantör ansluter sig till det överdådiga kungliga hovet och får en inblick i rikets storslagna strategier. Krig rasar längs gränserna nära din by, och kungen har beslutat att ditt slott skulle vara den mest lämpliga platsen för att ta emot och delta i hans trötta kungliga företag.\n\nKungen lovar dig mynt och inflytande om du accepterar dessa kungliga plikter.",
+		"KINGDOMHOSTING_KINGSUMMON_DESC@2025-01-14 22:58:01": "Din kungliga hovman ansluter sig till det överdådiga kungliga hovet och får en inblick i rikets storslagna strategier. Krig rasar längs gränserna nära din by, och kungen har beslutat att ditt slott skulle vara den mest lämpliga platsen för att ta emot och delta i hans trötta kungliga kompanier.\n\nKungen lovar dig mynt och inflytande om du accepterar dessa kungliga plikter.",
 		"KINGDOMHOSTING_KINGSUMMON_CHOICE_A@~2024-05-03 18:17:16": "Vårt slott står till er tjänst, Ers Majestät.",
 		"KINGDOMHOSTING_KINGSUMMON_CHOICE_A_TOOLTIP@2025-01-14 22:58:01": "Genom att acceptera dina kungliga plikter måste du delta i trötta kungliga sällskap som besöker din by.",
 		"KINGDOMHOSTING_KINGSUMMON_OUTCOME_TITLE@~2024-06-17 18:20:20": "Kungliga plikter utdelade",
 		"KINGDOMHOSTING_KINGSUMMON_CHOICE_NO@~2024-05-03 17:37:42": "Vi måste fundera på det här.",
-		"KINGDOMHOSTING_KINGSUMMON_CHOICE_NO_TOOLTIP@2025-01-14 22:58:01": "Du kan acceptera senare genom att ge din Royal Courtier mandat igen.",
+		"KINGDOMHOSTING_KINGSUMMON_CHOICE_NO_TOOLTIP@2025-01-14 22:58:01": "Du kan acceptera senare genom att ge din Kungliga hovman mandat igen.",
 		"KINGDOMHOSTING_KINGSUMMON_OUTCOME_DESC@2025-01-14 22:58:01": "Du har gått med på att besöka trötta kungliga företag som en del av de kungliga plikterna. Genom att tillgodose deras behov tjänar du mynt och inflytande.",
 		"KINGDOM_KINGSUMMON_CAMPAIGN_MANDATE@~2024-05-03 19:51:12": "Närvara vid domstolen för att diskutera krigföring",
 		"KINGDOM_KINGSUMMON_CAMPAIGN_MANDATE_BTN_TOOLTIP@2025-01-14 22:58:01": "Om du går med på att stärka din armé kommer du så småningom att kunna delta i militära kampanjer.",
