--- a/Foundation/sv/help.release.json
+++ b/Foundation/sv/help.release.json
@@ -1,6 +1,6 @@
 ﻿{
 	"HELP_TOPIC_CATEGORIES": {
-		"HELP_EDICTSPRIVILEGES_CATEGORY_TITLE": "Påbud och privilegier",
+		"HELP_EDICTSPRIVILEGES_CATEGORY_TITLE": "Förordnanden och privilegier",
 		"HELP_KINGDOM_CATEGORY_TITLE": "Kungadöme",
 		"HELP_CLERGY_CATEGORY_TITLE@~2025-01-07 03:07:49": "Prästerskap",
 		"HELP_EXPANDING_CATEGORY_TITLE@~2025-01-07 03:07:56": "Expandera",
@@ -20,7 +20,7 @@
 		"HELP_HOUSING_PAVEDROAD_TITLE": "Asfalterade vägar",
 		"HELP_EDICTSPRIVILEGES_SLOTS_TITLE@2025-01-27 18:38:51": "Edict & Privilege Slots",
 		"HELP_EDICTSPRIVILEGES_EFFECTS_TITLE": "Effects of Edicts & Privileges",
-		"HELP_EDICTSPRIVILEGES_CHANGING_TITLE": "Ändring av föreskrifter och privilegier",
+		"HELP_EDICTSPRIVILEGES_CHANGING_TITLE": "Ändring av förordnanden och privilegier",
 		"HELP_LABORER_ADDITIONALTAXATION_TITLE": "Ytterligare skatter",
 		"HELP_LABORER_TAVERN_TITLE": "Värdshus",
 		"HELP_LABORER_LODGING_TITLE": "Husrum",
@@ -106,20 +106,20 @@
 		"HELP_HOUSING_PAVEDROAD_TEXT_1@2025-01-27 18:38:51": "**Högkvalitativa bostäder** kräver **Avlagda vägar**, som skapas genom att ge **Stone** resurser till **Paviours** och låta dem **uppgradera grusvägar** med hjälp av **Road Paving** målningen.",
 		"HELP_HOUSING_PAVEDROAD_TEXT_2@2025-01-27 18:38:51": "Med tiden **förmultnar** **Paved Roads** och måste **repareras** av **Paviours** med hjälp av ytterligare **Stone**. Medan **Paviours** är fokuserade på **reparationer**, kan de **inte uppgradera** nya grusvägar.",
 		"HELP_HOUSING_PAVEDROAD_TEXT_3@2025-01-27 18:38:51": "För att **effektivt** hantera **stora områden** kan du överväga att bygga **flera Paviours' Yards**.",
-		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_1@~2025-01-07 00:17:59": "**Edicts** och **Privileges** är policyer som ger kontextspecifika **bonusar** till din by.",
-		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_2@~2025-01-07 00:18:17": "För att aktivera dem måste du först låsa upp **Edict** och **Privilege slots** genom **Progression Screen**:",
-		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_3@~2025-01-07 00:19:07": "**Edict Slots**: Låses upp via den gemensamma vägen.",
-		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_4@~2025-01-07 00:19:10": "**Privilegierade platser**: Låses upp genom var och en av Estate Paths.",
-		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_5@~2025-01-07 00:19:32": "När en slot är upplåst kan du **välja** en av de önskade **Edicts** eller **Privilegies** från sidan **Edicts & Privileges** i **Royal Book**.",
-		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_1@~2025-01-07 00:51:38": "Varje **Edict** och **Privilege** erbjuder unika effekter som kan **gynna** din by i **specifika situationer**. Här är några exempel:",
-		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_2@~2025-01-07 00:51:42": "**Noggrann planering**: Ett påbud som återbetalar några av de verktyg som används under byggandet.",
+		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_1@~2025-01-07 00:17:59": "**Förordnanden** och **Privilegier** är regler som ger sammanhangsspecifika **bonusar** till din by.",
+		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_2@~2025-01-07 00:18:17": "För att aktivera dem måste du först låsa upp **Förordnande** och **Privilegie-platser** genom **Utvecklingsskärmen**:",
+		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_3@~2025-01-07 00:19:07": "**Förordnande-platser**: Låses upp via den gemensamma vägen.",
+		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_4@~2025-01-07 00:19:10": "**Privilegie-platser**: Låses upp genom var och en av Estate Paths.",
+		"HELP_EDICTSPRIVILEGES_SLOTS_TEXT_5@~2025-01-07 00:19:32": "När en slot är upplåst kan du **välja** en av de önskade **Förordnanden** eller **Privilegier** från sidan **Förordnanden och privilegier** i **Kungaboken**.",
+		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_1@~2025-01-07 00:51:38": "Varje **Förordnande** och **Privilegie** erbjuder unika effekter som kan **gynna** din by i **specifika situationer**. Här är några exempel:",
+		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_2@~2025-01-07 00:51:42": "**Noggrann planering**: Ett förordnande som återbetalar några av de verktyg som används under byggandet.",
 		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_3@~2025-01-07 00:51:45": "**Skötsamma betalare**: En arbetsprivilegium som minskar Happiness-straffet från beskattning.",
-		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_4@~2025-01-07 00:51:49": "**Inherited Land**: En Kingdom Privilege som ibland ger dig ett gratis Territory.",
-		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_5@~2025-01-07 00:51:54": "**Tithe Skatter**: Ett prästerskapsprivilegium som gör att du kan beskatta kapell och kyrkor.",
+		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_4@~2025-01-07 00:51:49": "**Ärvt land**: En Kingdom Privilege som ibland ger dig ett kostnadsfritt territorie.",
+		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_5@~2025-01-07 00:51:54": "**Tionde skatter**: Ett prästerskapsprivilegium som gör att du kan beskatta kapell och kyrkor.",
 		"HELP_EDICTSPRIVILEGES_EFFECTS_TEXT_6@~2025-01-07 00:52:00": "När din by blomstrar kan du också låsa upp **hemliga privilegier**.",
-		"HELP_EDICTSPRIVILEGES_CHANGING_TEXT_1@~2025-01-07 00:52:27": "När en **Edict** eller **Privilege** är **enacted**, blir den **permanent låst**.",
-		"HELP_EDICTSPRIVILEGES_CHANGING_TEXT_2@2025-01-27 18:38:51": "Du kan dock låsa upp en tidigare låst **Edict** eller **Privilege** genom att använda mandaten **Revise an Edict** eller **Revise an Estate Privilege**.",
-		"HELP_EDICTSPRIVILEGES_CHANGING_TEXT_3@2025-01-27 18:38:51": "Din **Bailiff**, **Monastic Emissary** eller **Royal Courtier** kan utföra detta **mandat**.",
+		"HELP_EDICTSPRIVILEGES_CHANGING_TEXT_1@~2025-01-07 00:52:27": "När ett **Förordnande** eller **Privilegie** är **utfärdat**, blir den **permanent låst**.",
+		"HELP_EDICTSPRIVILEGES_CHANGING_TEXT_2@2025-01-27 18:38:51": "Du kan dock låsa upp ett tidigare låst **Förordnande** eller **Privilegie** genom att använda mandaten **Revidera ett förordnande** eller **Revise an Estate Privilege**.",
+		"HELP_EDICTSPRIVILEGES_CHANGING_TEXT_3@2025-01-27 18:38:51": "Din **Fogde**, **Monastiskt sändebud** eller **Kunglig hovman** kan utföra detta **mandat**.",
 		"HELP_EDICTSPRIVILEGES_CHANGING_TEXT_4@~2025-01-07 00:53:35": "Genom att revidera en **Edict** eller **Privilege** kan du **ta bort** den, vilket **frigör** **platsen** för ett nytt val.",
 		"HELP_EDICTSPRIVILEGES_CHANGING_TEXT_5@2025-01-27 18:38:51": "Kom ihåg att endast **ett Edict** eller **Privilegium** kan **revideras** per **mandat**.",
 		"HELP_LABORER_ADDITIONALTAXATION_TEXT_1@~2025-01-07 00:55:01": "Utöver **bostadsbeskattningen** kan du generera **ytterligare** myntinkomster** genom andra **typer** av **beskattning**:",
@@ -274,15 +274,15 @@
 		"HELP_GETTINGSTARTED_FIRSTMANDATES_TEXT_1@~2025-01-07 01:40:50": "I **Great Hall** kan du anta **Mandat**.",
 		"HELP_GETTINGSTARTED_FIRSTMANDATES_TEXT_2@2025-01-27 18:38:51": "Du kan när som helst starta **Uttaxeringsmandatet** för att få mynt på bekostnad av bybornas lycka eller använda **Promote Mandate** för att höja bybornas status.",
 		"HELP_GETTINGSTARTED_FIRSTMANDATES_TEXT_3@~2025-01-07 01:41:13": "**Mandat** har alltid en **kostnad** och en **nedkylning**.",
-		"HELP_GETTINGSTARTED_FIRSTMANDATES_TEXT_4@~2025-01-07 01:41:26": "**Tillgång** till **Mandaten** från **Royal Book** eller direkt från din **Great Hall**.",
+		"HELP_GETTINGSTARTED_FIRSTMANDATES_TEXT_4@~2025-01-07 01:41:26": "**Tillgång** till **Mandaten** från **Kungaboken** eller direkt från din **Stora salen**.",
 		"HELP_GETTINGSTARTED_FIRSTFORTIFICATION_TEXT_1@~2025-01-12 00:03:19": "**Fortifiering** krävs av **Hus** för att öka deras **Densitet**, och av vissa **Arbetsplatser** för att **fungera** ordentligt.",
 		"HELP_GETTINGSTARTED_FIRSTFORTIFICATION_TEXT_1_2@2025-01-27 18:44:39": "Det finns två sätt att ge berikning till omgivningen:",
 		"HELP_GETTINGSTARTED_FIRSTFORTIFICATION_TEXT_2@~2025-01-07 01:41:58": "Genom att bygga **Vakttorn**. Du behöver sedan en **Väktare** för att ockupera det. De kan anlitas från en **Vaktpost**, en **underbyggnad** till **herrgården**.",
 		"HELP_GETTINGSTARTED_FIRSTFORTIFICATION_TEXT_3@~2025-01-07 01:42:08": "Genom att **omgärda** ett område med **murar** som ger den typ av **befästning** som behövs.",
 		"HELP_GETTINGSTARTED_FIRSTFORTIFICATION_TEXT_4@~2025-01-07 01:42:18": "Du bör se en **visuell återkoppling** när ett område är täckt med Fortification.",
-		"HELP_GETTINGSTARTED_FIRSTDECORATION_TEXT_1@~2025-01-07 01:42:32": "**Dekorationer** förgyller din by med **Försköning** eller **Förgyllning**.",
+		"HELP_GETTINGSTARTED_FIRSTDECORATION_TEXT_1@~2025-01-07 01:42:32": "**Dekorationer** förgyller din by med **Försköning** eller **Prakt**.",
 		"HELP_GETTINGSTARTED_FIRSTDECORATION_TEXT_2@~2025-01-07 01:42:37": "**För försköning**: Bygg dem från menyn Bygg.",
-		"HELP_GETTINGSTARTED_FIRSTDECORATION_TEXT_3@~2025-01-07 01:42:40": "**För prakt**: Bygg dem från valfritt Monument av Estates.",
+		"HELP_GETTINGSTARTED_FIRSTDECORATION_TEXT_3@~2025-01-07 01:42:40": "**För prakt**: Bygg dem från valfritt Monument för egendomarna.",
 		"HELP_GETTINGSTARTED_INCREASINGPROSPERITY_TEXT_1@~2025-01-07 01:42:50": "**Prosperity** låser upp nytt **innehåll** på **Progression Screen**.",
 		"HELP_GETTINGSTARTED_INCREASINGPROSPERITY_TEXT_2@2025-01-27 18:38:51": "Du kan **öka välståndet** på många sätt, till exempel genom att få **mer vinst**, ha **mer befolkning** och **låsa upp** och **uppgradera handelsvägar**.",
 		"HELP_GETTINGSTARTED_INCREASINGPROSPERITY_TEXT_3@~2025-01-07 01:43:14": "Kontrollera för **detaljer** på **Progression Screen**.",
