--- a/Foundation/sv/unlockables.release.json
+++ b/Foundation/sv/unlockables.release.json
@@ -37,18 +37,18 @@
 		"UNLOCKABLE_MONASTERY_DESC@~2023-01-01 01:01:01": "Låser upp klostermonumentet, som gör att du kan ägna bybor åt ett klosterliv.",
 		"UNLOCKABLE_CHURCH_ARCHITECTURE_DESC@~2023-01-01 01:01:01": "Låser upp ytterligare delar till din rustika kyrka.",
 		"UNLOCKABLE_APIARY_DESC@2025-01-14 23:02:04": "Låser upp produktionen av vax och honung, en material- respektive lyxresurs.",
-		"UNLOCKABLE_BAILIFF_MONASTIC_DESC@~2024-07-15 18:05:06": "Låser upp Emissary Office för ditt kloster, vilket gör att du kan nominera en Monastic Emissary.",
+		"UNLOCKABLE_BAILIFF_MONASTIC_DESC@~2024-07-15 18:05:06": "Låser upp Sändebudshus för ditt kloster, vilket gör att du kan nominera en Monastiskt sändebud.",
 		"UNLOCKABLE_CLOISTER_DESC@2025-01-14 23:02:04": "Låser upp ett kloster till ditt kloster, vilket uppfyller behovet av ett kloster.",
 		"UNLOCKABLE_HOSPITIUM_DESC@2025-01-14 23:02:04": "Låser upp Hospitium för ditt kloster, så att pilgrimer kan vila där.",
 		"UNLOCKABLE_MONASTERY_KITCHEN_DESC@~2023-01-01 01:01:01": "Låser upp produktionen av Monastic Food från ett urval av recept.",
-		"UNLOCKABLE_CLERGY_SPLENDOR_DESC@2025-01-14 22:58:01": "Låser upp Splendour-dekorationer för dina Clergy-monument.",
+		"UNLOCKABLE_CLERGY_SPLENDOR_DESC@2025-01-14 22:58:01": "Låser upp Prakt-dekorationer för dina prästerskapsmonument.",
 		"UNLOCKABLE_MONASTERY_MODEST_DESC@~2023-01-01 01:01:01": "Låser upp Modest Parts för ditt kloster.",
 		"UNLOCKABLE_WINE_PRODUCTION_DESC@2025-01-14 23:02:04": "Låser upp produktionen av vin, en underhållningsresurs.",
 		"UNLOCKABLE_STONE_CHURCH_DESC@~2023-01-01 01:01:01": "Låser upp stenkyrkan för din by.",
 		"UNLOCKABLE_ABBATIAL_DESC@~2023-01-01 01:01:01": "Låser upp Abbatial Church för ditt kloster.",
 		"UNLOCKABLE_CASTLE_DESC@~2023-01-01 01:01:01": "Låser upp slottsmonumentet, som låter dig rekrytera, utbilda och utplacera stridande.",
 		"UNLOCKABLE_CASTLE_ARCHITECTURE_DESC@~2023-01-01 01:01:01": "Låser upp ytterligare delar till ditt slott.",
-		"UNLOCKABLE_KINGDOM_SPLENDOR_DESC@2025-01-14 22:58:01": "Låser upp Splendour-dekorationer för dina Kingdom-monument.",
+		"UNLOCKABLE_KINGDOM_SPLENDOR_DESC@2025-01-14 22:58:01": "Låser upp Prakt-dekorationer för dina kungarikesmonument.",
 		"UNLOCKABLE_BAILIFF_KINGDOM_DESC@~2024-07-15 18:01:51": "Låser upp det kungliga kontoret för ditt slott, där du kan nominera en kunglig hovman.",
 		"UNLOCKABLE_PROVISIONER_DESC@~2023-01-01 01:01:01": "Låser upp produktionen av krigsransoner från ett urval av recept.",
 		"UNLOCKABLE_SPEAR_WARFARE_DESC@2025-01-14 22:58:01": "Låser upp bildandet av spjutföretag vid ditt slott och produktionen av spjut.",
