--- a/Foundation/sv/agents.release.json
+++ b/Foundation/sv/agents.release.json
@@ -1,45 +1,45 @@
 ﻿{
 	"HAPPINESS_FACTORS": {
 		"VISIT_HAS_LACKED@2025-01-14 22:58:01": "Missade ett besök",
-		"VISIT_HAS_LACKED_DESC": "Gästen har inte kunnat besöka en viss byggnad och drabbas därför av en större nedgång i lycka. När det motsvarande behovet är uppfyllt kommer humöret långsamt att förbättras med tiden.",
-		"WANDERINGMONKS_DELIVERY_HAPPINESSFACTOR_TITLE": "Levereras för vägen",
+		"VISIT_HAS_LACKED_DESC": "Gästen har inte kunnat besöka en viss byggnad och drabbas därför av en större nedgång i lycka. När motsvarande behov är uppfyllt kommer dess humör långsamt att förbättras med tiden.",
+		"WANDERINGMONKS_DELIVERY_HAPPINESSFACTOR_TITLE": "Rustad för resan",
 		"WANDERINGMONKS_DELIVERY_HAPPINESSFACTOR_DESC": "Du gav mat till de vandrande munkarna.",
-		"WANDERINGMONKS_UNDELIVERED_HAPPINESSFACTOR_TITLE": "Med tomma händer på väg till jobbet",
+		"WANDERINGMONKS_UNDELIVERED_HAPPINESSFACTOR_TITLE": "Tomhänt för resan",
 		"WANDERINGMONKS_UNDELIVERED_HAPPINESSFACTOR_DESC": "Du gav inte mat till de vandrande munkarna.",
 		"MONASTERYTRADE_MERCHANT_BONUS_HAPPINESSFACTOR_TITLE": "Gynnsamma förhandlingar",
 		"MONASTERYTRADE_MERCHANT_BONUS_HAPPINESSFACTOR_DESC@~2023-12-05 19:49:36": "Du förbättrade sannolikheten för gynnsamma förhandlingar med handelsvägar.",
 		"MONASTERYTRADE_MERCHANT_MALUS_HAPPINESSFACTOR_TITLE": "Ofördelaktiga förhandlingar",
-		"MONASTERYTRADE_MERCHANT_MALUS_HAPPINESSFACTOR_DESC@~2023-12-05 19:49:50": "Du hindrade sannolikheten för gynnsamma förhandlingar med handelsvägar.",
-		"ASPIRATION_MONASTERY_BONUS_HAPPINESSFACTOR_TITLE@~2023-01-01 01:01:01": "Innehåll Abbedissa",
+		"MONASTERYTRADE_MERCHANT_MALUS_HAPPINESSFACTOR_DESC@~2023-12-05 19:49:50": "Du miskade sannolikheten för gynnsamma förhandlingar med handelsvägar.",
+		"ASPIRATION_MONASTERY_BONUS_HAPPINESSFACTOR_TITLE@~2023-01-01 01:01:01": "Belåten abbedissa",
 		"ASPIRATION_MONASTERY_BONUS_HAPPINESSFACTOR_DESC@2025-01-14 22:58:01": "Du uppfyllde abbedissans förväntningar.",
 		"ASPIRATION_MONASTERY_MALUS_HAPPINESSFACTOR_TITLE@~2024-01-10 18:43:22": "Besviken abbedissa",
 		"ASPIRATION_MONASTERY_MALUS_HAPPINESSFACTOR_DESC@~2024-01-10 18:41:13": "Du uppfyllde inte abbedissans förväntningar.",
-		"FACTOR_MEAL_TAVERN": "Måltid på krogen",
-		"FACTOR_MEAL_TAVERN_DESC@2025-01-20 19:07:05": "Din bybo åt en utsökt måltid på tavernan! Denna Lyckobonus kommer att försvinna med tiden.",
-		"LABOURFAIR_GLOOMFAIR_HAPPINESSFACTOR_TITLE": "Bleak Fair",
-		"LABOURFAIR_GLOOMFAIR_HAPPINESSFACTOR_DESC": "Mässan gick inte så bra som folk hade hoppats! Dina föräldrar är ledsna över den misslyckade händelsen. Deras humör kommer att förbättras med tiden.",
-		"LABOURFAIR_MERRYFAIR_HAPPINESSFACTOR_TITLE": "Glädjefylld mässa",
-		"LABOURFAIR_MERRYFAIR_HAPPINESSFACTOR_DESC@2025-01-14 22:58:01": "Mässan levde upp till förväntningarna! Ditt folk gläder sig över det lyckade evenemanget, även om Happiness-bonusen gradvis kommer att försvinna.",
-		"LABOURFAIR_HAPPYGUESTS_HAPPINESSFACTOR_TITLE": "Glada besökare",
-		"LABOURFAIR_HAPPYGUESTS_HAPPINESSFACTOR_DESC": "En del av besökarna hade det väldigt trevligt och muntrade upp byborna.",
-		"LABOURFAIR_UNHAPPYGUESTS_HAPPINESSFACTOR_TITLE": "Irriterade besökare",
-		"LABOURFAIR_UNHAPPYGUESTS_HAPPINESSFACTOR_DESC": "Några av besökarna hade det hemskt och gjorde byborna upprörda.",
+		"FACTOR_MEAL_TAVERN": "Värdshusmåltid",
+		"FACTOR_MEAL_TAVERN_DESC@2025-01-20 19:07:05": "Din bybo åt en utsökt måltid på värdshuset! Denna Lyckobonus kommer att försvinna med tiden.",
+		"LABOURFAIR_GLOOMFAIR_HAPPINESSFACTOR_TITLE": "En dyster mässa",
+		"LABOURFAIR_GLOOMFAIR_HAPPINESSFACTOR_DESC": "Mässan gick inte så bra som folk hade hoppats! Ditt folk är ledset över det misslyckade evenemanget. Deras humör kommer att förbättras med tiden.",
+		"LABOURFAIR_MERRYFAIR_HAPPINESSFACTOR_TITLE": "Munter Mässa",
+		"LABOURFAIR_MERRYFAIR_HAPPINESSFACTOR_DESC@2025-01-14 22:58:01": "Mässan levde upp till förväntningarna! Ditt folk gläder sig över det lyckade evenemanget, men Lyckobonusen kommer gradvis försvinna.",
+		"LABOURFAIR_HAPPYGUESTS_HAPPINESSFACTOR_TITLE": "Nöjda besökare",
+		"LABOURFAIR_HAPPYGUESTS_HAPPINESSFACTOR_DESC": "Några av besökarna hade det underbart och muntrade upp dina bybor.",
+		"LABOURFAIR_UNHAPPYGUESTS_HAPPINESSFACTOR_TITLE": "Missnöjda besökare",
+		"LABOURFAIR_UNHAPPYGUESTS_HAPPINESSFACTOR_DESC": "Några av besökarna hade det hemskt och gjorde dina bybor upprörda.",
 		"LABOURFAIR_MERRYGUESTS_DESCRIPTOR": "Tack vare nöjda besökare",
-		"LABOURFAIR_BLEAKGUESTS_DESCRIPTOR": "På grund av irriterade besökare",
-		"LABOURFAIR_MERRY_DESCRIPTOR": "På grund av den glada marknaden",
+		"LABOURFAIR_BLEAKGUESTS_DESCRIPTOR": "På grund av missnöjda besökare",
+		"LABOURFAIR_MERRY_DESCRIPTOR": "Tack vare den muntra mässan",
 		"LABOURFAIR_BLEAK_DESCRIPTOR": "På grund av den dystra mässan",
 		"ASPIRATION_KINGDOM_BONUS_HAPPINESSFACTOR_TITLE@~2023-01-01 01:01:01": "Förtjust kung",
 		"ASPIRATION_KINGDOM_BONUS_HAPPINESSFACTOR_DESC@~2023-01-01 01:01:01": "Du uppfyllde kungens krav.",
 		"ASPIRATION_KINGDOM_MALUS_HAPPINESSFACTOR_TITLE@~2023-01-01 01:01:01": "Irriterad kung",
 		"ASPIRATION_KINGDOM_MALUS_HAPPINESSFACTOR_DESC@2025-01-14 22:58:01": "Du misslyckades med att uppfylla kungens krav.",
-		"BUILDING_CITYBELFRY_HAPPINESSFACTOR_TITLE@~2024-12-17 02:41:01": "Belfry Awe",
+		"BUILDING_CITYBELFRY_HAPPINESSFACTOR_TITLE@~2024-12-17 02:41:01": "Klocktornets vördnad",
 		"BUILDING_CITYBELFRY_HAPPINESSFACTOR_DESC@~2024-12-17 01:21:08": "Din bybo har förmånen att bo nära stadens klockstapel! De får en humörbonus som varar så länge de bor i närheten.",
-		"ASPIRATION_LABOR_REWARD_HAPPINESSFACTOR_TITLE": "Fria människor i riket",
+		"ASPIRATION_LABOR_REWARD_HAPPINESSFACTOR_TITLE": "Rikets fria folk",
 		"ASPIRATION_LABOR_REWARD_HAPPINESSFACTOR_DESC": "Stadens stadga gav dina bybor deras suveränitet.",
-		"ASPIRATION_LABOR_BONUS_HAPPINESSFACTOR_TITLE@~2024-12-18 03:56:44": "Nöjd seneschal",
-		"ASPIRATION_LABOR_BONUS_HAPPINESSFACTOR_DESC": "Du överraskade seneschalen positivt.",
-		"ASPIRATION_LABOR_MALUS_HAPPINESSFACTOR_TITLE": "Vexed Seneschal",
-		"ASPIRATION_LABOR_MALUS_HAPPINESSFACTOR_DESC": "Du gör seneschalen upprörd.",
+		"ASPIRATION_LABOR_BONUS_HAPPINESSFACTOR_TITLE@~2024-12-18 03:56:44": "Nöjd seneschall",
+		"ASPIRATION_LABOR_BONUS_HAPPINESSFACTOR_DESC": "Du gav seneschallen en glad överraskning.",
+		"ASPIRATION_LABOR_MALUS_HAPPINESSFACTOR_TITLE": "Förargad seneschall",
+		"ASPIRATION_LABOR_MALUS_HAPPINESSFACTOR_DESC": "Du gjorde seneschallen upprörd.",
 		"BUILDING_KNIGHT_STATUE_HAPPINESSFACTOR_TITLE@~2025-01-20 23:59:40": "Hjältarnas stolthet",
 		"BUILDING_KNIGHT_STATUE_HAPPINESSFACTOR_DESC@2025-01-27 18:59:14": "Dina kombattanter är mycket stolta över att tjäna sitt rike! Alla kombattanter får en lyckobonus så länge Hjältarnas domstol står kvar."
 	},
@@ -50,7 +50,7 @@
 		"COULD_NOT_STAY_AT_X": "Kunde inte stanna kvar på {1}!",
 		"COULD_NOT_EQUIP_WEAPON@~2024-02-16 18:40:01": "Kunde inte utrusta ett vapen!",
 		"COULD_NOT_BE_HEALED@~2024-02-16 18:40:06": "Kunde inte bli botad!",
-		"COULD_NOT_TRAIN@~2024-02-16 18:41:12": "Det gick inte att träna med en träningsdummy!"
+		"COULD_NOT_TRAIN@~2024-02-16 18:41:12": "Det gick inte att träna med en träningsdocka!"
 	},
 	"PROMOTION": {
 		"ADDITIONAL_REQUIREMENT": "Ytterligare krav",
@@ -65,9 +65,9 @@
 		"ABBESS_ENVOY_DESC@2025-01-14 22:58:01": "Delegaten talar och sköter ärenden åt sin överordnade, abbedissan.",
 		"WANDERING_MONK_DESC": "Vandrande munkar predikar tron över hela riket.",
 		"PILGRIM_DESC@~2023-07-28 13:48:35": "Pilgrimer söker skydd när de reser runt i riket.",
-		"ABBESS_DESC@~2023-12-05 18:24:18": "Abbedissan leder det ansedda nunneklostret Kinstone.",
-		"YOUR_KING_DESC@~2024-05-10 16:56:49": "Kungen av riket, din länsherre, som du är skyldig trohet och lojalitet.",
-		"VISITING_KINGRETINUE_DESC@2025-01-14 22:58:01": "Kungens följe består av hans eller hennes favoritrådgivare, hovmän, betjänter och gardister.",
+		"ABBESS_DESC@~2023-12-05 18:24:18": "Abbedissan leder det ansedda nunneklostret Kinstorp.",
+		"YOUR_KING_DESC@~2024-05-10 16:56:49": "Rikets kung, din länsherre, som du är skyldig trohet och lojalitet.",
+		"VISITING_KINGRETINUE_DESC@2025-01-14 22:58:01": "Kungens följe består av dess favoritrådgivare, hovmän, betjänter och vakter.",
 		"VISITING_ROYALCOMPANY_DESC@~2024-06-17 18:26:54": "I de kungliga kompanierna deltar kungens vasaller när de strider för hans räkning.",
 		"TRAVELER_DESC@~2024-12-17 17:46:33": "Resenärer söker logi för att vila och fylla på sina förråd när de reser genom riket."
 	}
